# yelp_analysis

./: Makefile  README.md  pyproject.toml
docs/: setup.md
models/: logistic_regression.joblib
notebooks/: 0.0-open_data.ipynb  0.1-model_testing.ipynb  0.1-review_flags.ipynb  Untitled.ipynb
src/: config.py  dataset.py  features.py  plots.py
src/modeling/: train.py
