[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "src"
version = "0.0.1"
description = "An analysis of the Yelp Dag Dataset."
authors = [
  { name = "Spencer Venancio" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
dependencies = [
    "loguru",
    "pip",
    "python-dotenv",
    "ruff",
    "tqdm",
    "typer",
    "pandas", 
    "matplotlib",
    "scikit-learn", 
    "lightgbm", 
    "fastparquet"
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["src"]
include = ["pyproject.toml", "src/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["src"]
force-sort-within-sections = true

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]

